--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,16 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <selenium_java.version>3.141.59</selenium_java.version>
-        <testng.version>7.1.0</testng.version>
+        <selenium_java.version>4.13.0</selenium_java.version>
+        <webdrivermanager.version>5.6.3</webdrivermanager.version>
+        <testng.version>7.7.1</testng.version>
         <reportng.version>1.1.4</reportng.version>
         <velocity.version>1.7</velocity.version>
-        <guice.version>4.2.3</guice.version>
+        <guice.version>7.0.0</guice.version>
         <maven-project.version>2.2.1</maven-project.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
-        <build-helper-maven-plugin.version>3.1.0</build-helper-maven-plugin.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
+        <build-helper-maven-plugin.version>3.5.0</build-helper-maven-plugin.version>
         <properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
 
         <sureFireDir>${project.basedir}/reports/</sureFireDir>
@@ -64,6 +65,12 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-project</artifactId>
             <version>${maven-project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.6.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
